# 5788_Crescendo_AI

./: README.md  main.py  pyproject.toml  test.py
crescendo_ai/: __init__.py  log_init.py  predict.py
models/: best_v5_320.pt
